# somf

./: .gitignore  PULL_REQUEST_TEMPLATE  README.md  README_en.md  README_ja.md  pyproject.toml  testfunc.py
.github/ISSUE_TEMPLATE/: bug-report-----.md  feature-request----------.md  more-descriptions-of-lib---------------.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
data/: kura.txt
data/animal/: labels.txt
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
experiments/: 0331_compare_beta_type.py  0331_fitting.py  0331_kura_fitting.py  0331_meshgrid.py  0331_sin_fitting.py  0711_compare_beta_change.py  compare_BKSvsGP.ipynb
experiments/.ipynb_checkpoints/: compare_BKSvsGP-checkpoint.ipynb
experiments/0710Mtg/: compare_BKSvsGP.ipynb
experiments/watanabe/: 0331_compare_beta_type1_and_2.py
lib/graphics/: KSEViewer.py  observation_space.py  sequential_space.py
lib/models/: KSE.py  KSE0331.py
libs/models/: TSOMPlusSOM.py  TSOM_plus_SOM.py  __init__.py  kernel_smoothing.py  kernel_smoothing_theano.py  som.py  som2.py  som_for_som2.py  som_tensorflow.py  som_use_for.py  tsom.py  tsom2_ishida.py  tsom3.py  tsom3_another.py  tsom_cross_som.py  tsom_missing_value.py  tsom_missing_value_test.ipynb  tsom_plus_som.py  tsom_sparse.py  tsom_tensorflow.py  tsom_tf.py  tsom_use_for.py  (+2 more)
output/: events.out.tfevents.1548853374.hatanohajime-no-MacBook-Pro.local
tests/: 0331_allclose.py  0331_beta.py  0331_vs_standard_kura_fitting.py  0428_allclose.py  0524_allclose.py
tutorials/: 0331_kura_fitting.py  0331_sin_fitting.py
(+224 files in other folders)
