[tool.poetry]
name = "somf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
tensorflow = "^2.2.0"
tqdm = "^4.46.0"
sklearn = "^0.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
