[tool.poetry]
name = "somf"
version = "0.1.0"
description = ""
authors = ["TetraMiyazaki <kpasso1015@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
